WIP: WiFi handler. TODO: Migrate to swift 5.5

--- a/SwiftDataAcquisition/Base.lproj/Main.storyboard
+++ b/SwiftDataAcquisition/Base.lproj/Main.storyboard
@@ -461,7 +461,7 @@
                                     <action selector="DevicePortEditBtnPressed:" destination="YLP-oH-dxS" eventType="touchDown" id="5ha-1x-eUJ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Device port:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="9bc-eO-jle">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Device port:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="9bc-eO-jle">
                                 <rect key="frame" x="15" y="341" width="98" height="27.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
@@ -478,6 +478,7 @@
                             <constraint firstItem="Ac0-DD-7aB" firstAttribute="top" secondItem="0sg-7F-OW5" secondAttribute="bottom" constant="8" symbolic="YES" id="6va-aJ-ZN6"/>
                             <constraint firstItem="q0k-y0-9fh" firstAttribute="top" secondItem="Ac0-DD-7aB" secondAttribute="bottom" constant="11" id="7Vd-PY-e57"/>
                             <constraint firstItem="Q39-9g-30m" firstAttribute="bottom" secondItem="dhX-EX-wZE" secondAttribute="bottom" constant="60" id="BW0-OG-AVZ"/>
+                            <constraint firstItem="9bc-eO-jle" firstAttribute="leading" secondItem="Q39-9g-30m" secondAttribute="leading" constant="15" id="DU7-R6-UO1"/>
                             <constraint firstItem="3a1-Po-2KN" firstAttribute="centerX" secondItem="Q39-9g-30m" secondAttribute="centerX" id="GI6-U7-lDR"/>
                             <constraint firstItem="Q39-9g-30m" firstAttribute="trailing" secondItem="21A-6O-HHg" secondAttribute="trailing" constant="20" id="JMe-xr-rKJ"/>
                             <constraint firstItem="e0l-hL-8hd" firstAttribute="leading" secondItem="Q39-9g-30m" secondAttribute="leading" constant="20" id="Jzo-ui-EB8"/>
