--- a/SwiftDataAcquisition/Base.lproj/Main.storyboard
+++ b/SwiftDataAcquisition/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                     <segue destination="YLP-oH-dxS" kind="presentation" id="08l-jW-pjX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0l-WU-bjq">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0l-WU-bjq">
                                 <rect key="frame" x="20" y="626" width="374" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="About"/>
@@ -61,10 +61,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="o8f-x2-ucd" firstAttribute="top" secondItem="9de-Ga-4Uf" secondAttribute="bottom" constant="71" id="3lI-GM-r4E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H0l-WU-bjq" secondAttribute="trailing" constant="20" id="0sg-pJ-SzN"/>
+                            <constraint firstItem="H0l-WU-bjq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2hT-vQ-EGQ"/>
+                            <constraint firstItem="o8f-x2-ucd" firstAttribute="top" relation="lessThanOrEqual" secondItem="9de-Ga-4Uf" secondAttribute="bottom" constant="71" id="3lI-GM-r4E"/>
                             <constraint firstItem="H0l-WU-bjq" firstAttribute="top" secondItem="fmX-kq-w4x" secondAttribute="bottom" constant="8" symbolic="YES" id="73o-Ub-v4b"/>
                             <constraint firstItem="W6b-eY-czG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="9eW-Hx-9eT"/>
-                            <constraint firstItem="H0l-WU-bjq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="DL0-cj-tF7"/>
                             <constraint firstItem="fmX-kq-w4x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="FuR-cb-ZQw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kX7-jy-mbb" secondAttribute="trailing" constant="20" id="KJu-CX-GlF"/>
                             <constraint firstItem="kX7-jy-mbb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Lyt-lU-rvD"/>
@@ -78,7 +79,6 @@
                             <constraint firstItem="9de-Ga-4Uf" firstAttribute="top" secondItem="W6b-eY-czG" secondAttribute="bottom" constant="25" id="iXM-eV-Olw"/>
                             <constraint firstItem="fmX-kq-w4x" firstAttribute="top" secondItem="kX7-jy-mbb" secondAttribute="bottom" constant="8" symbolic="YES" id="pOf-Lt-o2s"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9de-Ga-4Uf" secondAttribute="trailing" constant="20" id="tYY-nZ-iNp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H0l-WU-bjq" secondAttribute="trailing" constant="103" id="v8e-WW-spH"/>
                             <constraint firstItem="W6b-eY-czG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="yC1-04-cIf"/>
                             <constraint firstItem="9de-Ga-4Uf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="yNs-qx-r1f"/>
                         </constraints>
@@ -152,6 +152,14 @@
                                     <action selector="StopBtnPressed:" destination="KSU-bc-leI" eventType="touchDown" id="kLL-yA-m9Q"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Whv-I0-xmM">
+                                <rect key="frame" x="145.66666666666666" y="512" width="122.99999999999997" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Show Graph"/>
+                                <connections>
+                                    <segue destination="UaX-8M-tzo" kind="presentation" id="s1y-67-313"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rhN-Rm-K19"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -159,15 +167,18 @@
                             <constraint firstItem="HFD-UA-ZJ6" firstAttribute="top" secondItem="rhN-Rm-K19" secondAttribute="top" constant="20" id="37n-ba-eX7"/>
                             <constraint firstItem="NC2-V5-AVG" firstAttribute="top" secondItem="BXQ-KF-BV4" secondAttribute="bottom" constant="74" id="5ak-mr-rpG"/>
                             <constraint firstItem="rhN-Rm-K19" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="NC2-V5-AVG" secondAttribute="bottom" constant="90" id="8B2-YD-NbB"/>
+                            <constraint firstItem="Whv-I0-xmM" firstAttribute="centerX" secondItem="rhN-Rm-K19" secondAttribute="centerX" id="Fg6-AH-NDf"/>
                             <constraint firstItem="aXx-5B-kHN" firstAttribute="top" secondItem="SgN-1Z-naL" secondAttribute="bottom" constant="57" id="GRL-OG-aIq"/>
                             <constraint firstItem="rhN-Rm-K19" firstAttribute="trailing" secondItem="hhp-kQ-KIt" secondAttribute="trailing" constant="40" id="IOA-gJ-cQi"/>
                             <constraint firstItem="4oF-AE-lLg" firstAttribute="top" relation="lessThanOrEqual" secondItem="aXx-5B-kHN" secondAttribute="bottom" constant="120" id="L1u-xZ-t4j"/>
                             <constraint firstItem="aXx-5B-kHN" firstAttribute="top" secondItem="hhp-kQ-KIt" secondAttribute="bottom" constant="57" id="Qcm-H0-iWE"/>
                             <constraint firstItem="hhp-kQ-KIt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="SgN-1Z-naL" secondAttribute="trailing" constant="23" id="RDT-4q-Gtn"/>
                             <constraint firstItem="NC2-V5-AVG" firstAttribute="leading" secondItem="rhN-Rm-K19" secondAttribute="leading" constant="57" id="VlO-y6-ff1"/>
+                            <constraint firstItem="NC2-V5-AVG" firstAttribute="top" secondItem="Whv-I0-xmM" secondAttribute="bottom" constant="26" id="W1M-td-c0o"/>
                             <constraint firstItem="aXx-5B-kHN" firstAttribute="leading" secondItem="rhN-Rm-K19" secondAttribute="leading" constant="20" id="Ztz-5q-1Q4"/>
                             <constraint firstItem="SgN-1Z-naL" firstAttribute="top" secondItem="HFD-UA-ZJ6" secondAttribute="bottom" constant="9" id="aVq-w9-1BZ"/>
                             <constraint firstItem="HFD-UA-ZJ6" firstAttribute="leading" secondItem="rhN-Rm-K19" secondAttribute="leading" constant="20" id="dN9-0v-OoW"/>
+                            <constraint firstItem="Whv-I0-xmM" firstAttribute="top" secondItem="BXQ-KF-BV4" secondAttribute="bottom" constant="8" symbolic="YES" id="dci-DF-HJA"/>
                             <constraint firstItem="rhN-Rm-K19" firstAttribute="trailing" secondItem="NC2-V5-AVG" secondAttribute="trailing" constant="57" id="gLL-SY-wIT"/>
                             <constraint firstItem="rhN-Rm-K19" firstAttribute="trailing" secondItem="aXx-5B-kHN" secondAttribute="trailing" constant="20" id="jV5-Mj-tcJ"/>
                             <constraint firstItem="BXQ-KF-BV4" firstAttribute="top" secondItem="4oF-AE-lLg" secondAttribute="bottom" constant="17.333333333333258" id="nlk-Y9-CDw"/>
@@ -200,32 +211,64 @@
             <objects>
                 <viewController id="UaX-8M-tzo" customClass="ChartsViewController" customModule="SwiftDataAcquisition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="84g-CD-bWh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MQ7-nc-Daj" customClass="BarChartView" customModule="Charts">
-                                <rect key="frame" x="20" y="20" width="374" height="379"/>
+                                <rect key="frame" x="20" y="20" width="374" height="472"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="YNv-n8-roW">
-                                <rect key="frame" x="57" y="593" width="300" height="42"/>
+                                <rect key="frame" x="57" y="646" width="300" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="M9k-h2-RSg" kind="unwind" unwindAction="handleExitMeasurements:" id="qTh-15-tRW"/>
+                                    <segue destination="M9k-h2-RSg" kind="unwind" unwindAction="handleExit:" id="ToN-4a-lyh"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="128" minValue="0.0" maxValue="256" translatesAutoresizingMaskIntoConstraints="NO" id="oEK-2F-eTm">
+                                <rect key="frame" x="55" y="536" width="304" height="30"/>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="128" minValue="0.0" maxValue="256" translatesAutoresizingMaskIntoConstraints="NO" id="Dur-MH-1Yx">
+                                <rect key="frame" x="55" y="609" width="304" height="30"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Max threshold" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="URX-1P-RbQ">
+                                <rect key="frame" x="57" y="573" width="300" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Min threshold" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="nZY-WL-KRN">
+                                <rect key="frame" x="57" y="500" width="300" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XTR-Sz-H8G"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="Dur-MH-1Yx" secondAttribute="trailing" constant="57" id="4Tp-Up-eem"/>
+                            <constraint firstItem="nZY-WL-KRN" firstAttribute="centerX" secondItem="XTR-Sz-H8G" secondAttribute="centerX" id="6VL-ZX-u4z"/>
+                            <constraint firstItem="Dur-MH-1Yx" firstAttribute="top" secondItem="URX-1P-RbQ" secondAttribute="bottom" constant="8" symbolic="YES" id="7Eo-Ze-6DD"/>
+                            <constraint firstItem="URX-1P-RbQ" firstAttribute="top" secondItem="oEK-2F-eTm" secondAttribute="bottom" constant="16" id="C9H-GY-Xq1"/>
+                            <constraint firstItem="URX-1P-RbQ" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="EEJ-n1-vMe"/>
+                            <constraint firstItem="Dur-MH-1Yx" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="EQK-CP-5vo"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="nZY-WL-KRN" secondAttribute="trailing" constant="57" id="LV8-Y7-Dae"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="oEK-2F-eTm" secondAttribute="trailing" constant="57" id="MBO-SI-chv"/>
                             <constraint firstItem="YNv-n8-roW" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="SIE-z7-DAi"/>
+                            <constraint firstItem="nZY-WL-KRN" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="TVK-ic-8z0"/>
                             <constraint firstItem="XTR-Sz-H8G" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="YNv-n8-roW" secondAttribute="bottom" constant="94" id="aku-Qx-6lw"/>
-                            <constraint firstItem="YNv-n8-roW" firstAttribute="top" relation="lessThanOrEqual" secondItem="MQ7-nc-Daj" secondAttribute="bottom" constant="181" id="bge-zb-Vuy"/>
+                            <constraint firstItem="YNv-n8-roW" firstAttribute="top" secondItem="Dur-MH-1Yx" secondAttribute="bottom" constant="62" id="bNh-qO-uuT"/>
                             <constraint firstItem="MQ7-nc-Daj" firstAttribute="leading" relation="lessThanOrEqual" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="20" id="cqs-KH-BDa"/>
                             <constraint firstItem="MQ7-nc-Daj" firstAttribute="top" secondItem="XTR-Sz-H8G" secondAttribute="top" constant="20" id="ehm-cX-97B"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="URX-1P-RbQ" secondAttribute="trailing" constant="57" id="gL9-Cz-Bjn"/>
                             <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MQ7-nc-Daj" secondAttribute="trailing" constant="20" id="lhH-GX-9JC"/>
+                            <constraint firstItem="oEK-2F-eTm" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="nI2-gV-XRf"/>
+                            <constraint firstItem="oEK-2F-eTm" firstAttribute="top" secondItem="nZY-WL-KRN" secondAttribute="bottom" constant="8" symbolic="YES" id="rXV-fm-wx9"/>
                             <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="YNv-n8-roW" secondAttribute="trailing" constant="57" id="sgT-x5-HZa"/>
+                            <constraint firstItem="nZY-WL-KRN" firstAttribute="top" secondItem="MQ7-nc-Daj" secondAttribute="bottom" constant="8" symbolic="YES" id="w9E-nR-QfH"/>
+                            <constraint firstItem="oEK-2F-eTm" firstAttribute="centerX" secondItem="XTR-Sz-H8G" secondAttribute="centerX" id="yWp-jN-sEY"/>
                         </constraints>
                     </view>
                     <connections>
@@ -235,7 +278,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4E-i0-mHc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="M9k-h2-RSg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2796" y="390"/>
+            <point key="canvasLocation" x="-136.23188405797103" y="-334.23913043478262"/>
         </scene>
         <!--Files View-->
         <scene sceneID="wWk-tT-HXH">
